2.0/user/user-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: svc-user
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: user.baidu.com
    http:
      paths:
      - path:
        backend:
          serviceName: svc-user
          servicePort: 8004
